fix: [DebugBar] make debug bar more user-friendly on mobile (#9473)

--- a/admin/css/debug-toolbar/toolbar.scss
+++ b/admin/css/debug-toolbar/toolbar.scss
@@ -457,6 +457,31 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    #debug-bar {
+      table {
+        display: block;
+        overflow-x: auto;
+        font-size: 12px;
+        margin: 5px 5px 10px 5px;
+  
+        td,
+        th {
+          padding: 4px 6px;
+        }
+      }
+  
+      .timeline {
+        display: block;
+        white-space: nowrap;
+        font-size: 12px;
+      }
+  
+      .toolbar {
+        overflow-x: auto;
+      }
+    }
+  }
 
 // THEMES
 // ========================================================================== */
